@@ -1,3 +1,4 @@
+ - Add Matrix::mult(const Vector& x, uint row) (temporary fix, assumes uniprocessor case)
  - Update shortcuts MassMatrix and StiffnessMatrix to new system
  - Add missing friend to Face.h (reported by Garth N. Wells)
 0.5.6 [2005-05-17]
